Rework
Full restructure + refactor.
Code unification.
New configuration and entity registration systems.
New entity replacement system.
Better mod compatibility.
New spawning system for sea scorpions.